--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My project</title>
+        <title>Income-expense accounting</title>
     </head>
 
     <body>
         <div id="root"></div>
-    <div>test</div>
     </body>
 </html>
